  mode). This fixes the ".AU" macro of "-mm".
* [nt]roff: The "\R" escape sequence works correctly again; in the last
  release, it had inserted the letter "R" into the text.
* [nt]roff: Long names including a string in their name are now handled
  correctly, e.g. ".nr x\*yz 1" no longer tries to set the register "x\*y"
  to the value "z".
* -ms: The ".IX" index macro now works in ".padj" mode.
* -me: The ".(x" and ".)x" index macros now work in ".padj" mode.
* A "-mpadj" macro set has been added. It simply executes ".do padj"
  and is useful to enable paragraph-at-once adjustment from the command
  line.

Release 061106
* [nt]roff: Support for paragraph-based justification has been added,
  enabled with ".ad p". The "Justification in Heirloom Troff" document
  has been expanded to cover the new features.
* [nt]roff: The ".hylen" request has been introduced to control the
  minimum number of characters a word must contain in order to be subject
  to hyphenation. The default is 5 independent of whether the ".hylang"
  request is active (in that case, it previously had been 4).
* [nt]roff: The ".pshape" request has been introduced to control the shape
  of a paragraph in ".ad p" mode.
* [nt]roff: The ".hypp" request has been introduced to control penalties
  of hyphenation points in ".ad p" mode.
* [nt]roff: The ".padj" request has been added; it enables ".ad p" mode
  globally in all environments. It is most useful to enable paragraph-at-
  once adjustment in existing documents.
* [nt]roff: The "\j" escape sequence has been introduced to specify custom
  penalties for line breaks in ".ad p" mode.
* troff: The ".char" request is now able to construct replacements for
  otherwise unknown locale-specific characters.
* troff: Fixed a typo in the hyphenation code that could result in the
  insertion of a large negative vertical motion in a word containing a
  character above Unicode point U+0800.
* troff: Fixed "\H" and "\S" to become effective if positioned directly