@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n4.c	1.95 (gritter) 11/10/06
+ * Sccsid @(#)n4.c	1.96 (gritter) 11/12/06
  */
 
 /*
@@ -1495,7 +1495,7 @@ setr(void)
 	termc = getach();
 	rq = getrq(3);
 	lgf--;
-	if ((numtp = findr(rq)) == NULL || skip(1))
+	if (skip(1) || (numtp = findr(rq)) == NULL)
 		return;
 	j = inumb(&numtp->val);
 	if (nonumb)
@@ -1521,9 +1521,9 @@ casnr1(int flt, int local)
 	lgf++;
 	skip(1);
 	rq = getrq(3);
+	skip(!local);
 	if ((numtp = _findr(rq, 0, 1, local, NULL)) == NULL)
 		goto rtn;
-	skip(!local);
 	a = _inumb(&numtp->val, flt ? &numtp->fval : NULL, flt, NULL);
 	if (nonumb)
 		goto rtn;
@@ -1799,10 +1799,15 @@ _inumb(int *n, float *fp, int flt, int *relative)
 	struct acc	i;
 	register int j, f;
 	register tchar ii;
+	int	nv = 0;
+	float	fv = 0;
 
 	f = 0;
 	lgf++;
 	if (n) {
+		nv = *n;
+		if (fp)
+			fv = *fp;
 		if ((j = cbits(ii = getch())) == '+')
 			f = 1;
 		else if (j == '-')
@@ -1813,9 +1818,9 @@ _inumb(int *n, float *fp, int flt, int *relative)
 	i = _atoi(flt);
 	lgf--;
 	if (n && f && !flt)
-		i.n = *n + f * i.n;
+		i.n = nv + f * i.n;
 	if (fp && f && flt)
-		i.f = *fp + f * i.f;
+		i.f = fv + f * i.f;
 	if (!flt) i.n = quant(i.n, res);
 	vflag = 0;
 	res = dfactd = dfact = 1;
