@@ -18,6 +18,8 @@ Release ...
 * [nt]roff: Long names including a string in their name are now handled
   correctly, e.g. ".nr x\*yz 1" no longer tries to set the register "x\*y"
   to the value "z".
+* [nt]roff: Fixed some more memory access problems that had been introduced
+  with support for local variables.
 * -ms: The ".IX" index macro now works in ".padj" mode.
 * -me: The ".(x" and ".)x" index macros now work in ".padj" mode.
 * A "-mpadj" macro set has been added. It simply executes ".do padj"
